-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: hotspot
-
b01
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8267848 | openjdk8u302 | Paul Hohensee | P2 | Resolved | Fixed | b05 |
| JDK-8248938 | 8u271 | David Buck | P2 | Resolved | Fixed | b01 |
| JDK-8244878 | 8u251 | David Buck | P2 | Resolved | Fixed | b34 |
| JDK-8251616 | emb-8u271 | David Buck | P2 | Resolved | Fixed | team |
| JDK-8246875 | emb-8u261 | David Buck | P2 | Resolved | Fixed | team |
There are a number of delete-non-virtual-dtor warnings which cause compilation failure on recent versions of Xcode. We will fix this warning as part of our toolchain upgrade effort.
This is not simply a warnings cleanup. HotSpot crashes when built with Xcode 10.1 without the fix to PerfData destructor.
This is a partial backport of Paul Hohensee's massive cleanup [0] of Xcode warnings. A complete backport of that chnageset is well beyond the scope of our toolchain upgrade work. But we do want to clean up as many warnings as we can with minimal risk.
Unlike Paul's fix, for 8u we only added / modified destructor declarations in the base classes and did *not* add explicit destructors to any of the derived classes. We also left the delete-non-virtual-dtor warnings disabled as it is believed that this warning frequently triggers false positives and has subsequently been re-enabled in mainline.
[0] http://hg.openjdk.java.net/jdk10/jdk10/hotspot/rev/c044f8d03932
This is not simply a warnings cleanup. HotSpot crashes when built with Xcode 10.1 without the fix to PerfData destructor.
This is a partial backport of Paul Hohensee's massive cleanup [0] of Xcode warnings. A complete backport of that chnageset is well beyond the scope of our toolchain upgrade work. But we do want to clean up as many warnings as we can with minimal risk.
Unlike Paul's fix, for 8u we only added / modified destructor declarations in the base classes and did *not* add explicit destructors to any of the derived classes. We also left the delete-non-virtual-dtor warnings disabled as it is believed that this warning frequently triggers false positives and has subsequently been re-enabled in mainline.
[0] http://hg.openjdk.java.net/jdk10/jdk10/hotspot/rev/c044f8d03932
- backported by
-
JDK-8244878 [8u] clean up delete-non-virtual-dtor warnings in HotSpot
-
- Resolved
-
-
JDK-8246875 [8u] clean up delete-non-virtual-dtor warnings in HotSpot
-
- Resolved
-
-
JDK-8248938 [8u] clean up delete-non-virtual-dtor warnings in HotSpot
-
- Resolved
-
-
JDK-8251616 [8u] clean up delete-non-virtual-dtor warnings in HotSpot
-
- Resolved
-
-
JDK-8267848 [8u] clean up delete-non-virtual-dtor warnings in HotSpot
-
- Resolved
-