8239400: [8u] clean up undefined-var-template warnings

From 8182299, clean up delete-non-virtual-dtor warnings in HotSpot

Reviewed-by: phh, simonis